--- a/crear_tablas.ipynb
+++ b/crear_tablas.ipynb
@@ -19,7 +19,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\hp\\AppData\\Local\\Temp\\ipykernel_15488\\3851317623.py:1: DtypeWarning: Columns (13,28,29,38,39) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\rod_e\\AppData\\Local\\Temp\\ipykernel_6516\\1256429594.py:1: DtypeWarning: Columns (13,28,29,38,39) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  data = pd.read_csv('./datasets/Data_unido_2018_2021.csv')\n"
      ]
     },
@@ -116,120 +116,33 @@
        "      <td>COMPLETA</td>\n",
        "      <td>MEDICAMENTO</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2016</td>\n",
-       "      <td>ABRIL</td>\n",
-       "      <td>2016-04-01</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>CASADA</td>\n",
-       "      <td>38</td>\n",
-       "      <td>NINGUNO</td>\n",
-       "      <td>SIN ACCESO A LA EDUCACION FORMAL</td>\n",
-       "      <td>TRABAJADORA DEL HOGAR NO REMUNERADA</td>\n",
-       "      <td>CATOLICA</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>CONDON</td>\n",
-       "      <td>2016-04-08</td>\n",
-       "      <td>COMPLETA</td>\n",
-       "      <td>MEDICAMENTO</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2016</td>\n",
-       "      <td>ABRIL</td>\n",
-       "      <td>2016-04-01</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>SOLTERA</td>\n",
-       "      <td>23</td>\n",
-       "      <td>NINGUNO</td>\n",
-       "      <td>PREPARATORIA</td>\n",
-       "      <td>EMPLEADA</td>\n",
-       "      <td>NINGUNA</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>CONDON</td>\n",
-       "      <td>2016-04-08</td>\n",
-       "      <td>COMPLETA</td>\n",
-       "      <td>MEDICAMENTO</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2016</td>\n",
-       "      <td>ABRIL</td>\n",
-       "      <td>2016-04-01</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>SOLTERA</td>\n",
-       "      <td>18</td>\n",
-       "      <td>NINGUNO</td>\n",
-       "      <td>SECUNDARIA</td>\n",
-       "      <td>ESTUDIANTE</td>\n",
-       "      <td>NINGUNA</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NINGUNO</td>\n",
-       "      <td>2016-04-15</td>\n",
-       "      <td>OTRO</td>\n",
-       "      <td>MEDICAMENTO</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 41 columns</p>\n",
+       "<p>2 rows × 41 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "    año    mes fecha_ingreso referida estado_civil  edad  \\\n",
        "0  2016  ABRIL    2016-04-01      NaN      SOLTERA    24   \n",
        "1  2016  ABRIL    2016-04-01      NaN      SOLTERA    30   \n",
-       "2  2016  ABRIL    2016-04-01      NaN       CASADA    38   \n",
-       "3  2016  ABRIL    2016-04-01      NaN      SOLTERA    23   \n",
-       "4  2016  ABRIL    2016-04-01      NaN      SOLTERA    18   \n",
        "\n",
-       "  institucion_derechohab                         nivel_edu  \\\n",
-       "0                NINGUNO                      PREPARATORIA   \n",
-       "1                NINGUNO                        SECUNDARIA   \n",
-       "2                NINGUNO  SIN ACCESO A LA EDUCACION FORMAL   \n",
-       "3                NINGUNO                      PREPARATORIA   \n",
-       "4                NINGUNO                        SECUNDARIA   \n",
+       "  institucion_derechohab     nivel_edu                            ocupacion  \\\n",
+       "0                NINGUNO  PREPARATORIA                           ESTUDIANTE   \n",
+       "1                NINGUNO    SECUNDARIA  TRABAJADORA DEL HOGAR NO REMUNERADA   \n",
        "\n",
-       "                             ocupacion  religion  ... semanas_gestacion_usg  \\\n",
-       "0                           ESTUDIANTE   NINGUNA  ...                   3.0   \n",
-       "1  TRABAJADORA DEL HOGAR NO REMUNERADA  CATOLICA  ...                   6.0   \n",
-       "2  TRABAJADORA DEL HOGAR NO REMUNERADA  CATOLICA  ...                   2.0   \n",
-       "3                             EMPLEADA   NINGUNA  ...                   1.0   \n",
-       "4                           ESTUDIANTE   NINGUNA  ...                   0.0   \n",
+       "   religion  ... semanas_gestacion_usg dias_gestacion_usg  \\\n",
+       "0   NINGUNA  ...                   3.0                NaN   \n",
+       "1  CATOLICA  ...                   6.0                NaN   \n",
        "\n",
-       "  dias_gestacion_usg firma_consentimiento se_complica  con_dolor analgesico  \\\n",
-       "0                NaN                  NaN         NaN        NaN        NaN   \n",
-       "1                NaN                  NaN         NaN        NaN        NaN   \n",
-       "2                NaN                  NaN         NaN        NaN        NaN   \n",
-       "3                NaN                  NaN         NaN        NaN        NaN   \n",
-       "4                NaN                  NaN         NaN        NaN        NaN   \n",
+       "  firma_consentimiento se_complica  con_dolor analgesico  anticonceptivo_post  \\\n",
+       "0                  NaN         NaN        NaN        NaN               CONDON   \n",
+       "1                  NaN         NaN        NaN        NaN               CONDON   \n",
        "\n",
-       "   anticonceptivo_post  fecha_cierre  resultado_ile  procedimiento_ile  \n",
-       "0               CONDON    2016-04-08       COMPLETA        MEDICAMENTO  \n",
-       "1               CONDON    2016-04-08       COMPLETA        MEDICAMENTO  \n",
-       "2               CONDON    2016-04-08       COMPLETA        MEDICAMENTO  \n",
-       "3               CONDON    2016-04-08       COMPLETA        MEDICAMENTO  \n",
-       "4              NINGUNO    2016-04-15           OTRO        MEDICAMENTO  \n",
+       "   fecha_cierre  resultado_ile  procedimiento_ile  \n",
+       "0    2016-04-08       COMPLETA        MEDICAMENTO  \n",
+       "1    2016-04-08       COMPLETA        MEDICAMENTO  \n",
        "\n",
-       "[5 rows x 41 columns]"
+       "[2 rows x 41 columns]"
       ]
      },
      "execution_count": 2,
@@ -417,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,14 +383,14 @@
     "    else:    \n",
     "        # Obtenemos la columan con la que vamos a trabajar\n",
     "        nat_mun = x[columna]\n",
-    "        inicio = 90041\n",
+    "        inicio = 90042\n",
     "        final = inicio + np.shape(nat_mun)[0]\n",
     "        \n",
     "        \n",
-    "        id = [i for i in range(inicio, final + 1)]\n",
+    "        id = [i for i in range(inicio, final)]\n",
     "        pais = ['México' for i in nat_mun]\n",
     "        estado = [float('nan') for mun in nat_mun]\n",
-    "        municipios = [float('nan') for num in nat_mun]\n",
+    "        municipios = ['Null' for i in range(np.shape(nat_mun)[0])]\n",
     "        \n",
     "        est_nac = list()\n",
     "        \n",
@@ -487,6 +400,13 @@
     "            else:\n",
     "                est_nac.append('Edo. de México')\n",
     "        \n",
+    "        \n",
+    "        # print('Natalidad',np.shape(nat_mun))\n",
+    "        # print('id', np.shape(id))\n",
+    "        # print('pais', np.shape(pais))\n",
+    "        # print('estado', np.shape(estado))\n",
+    "        # print('municipios', np.shape(municipios))\n",
+    "        # print('est_nac', np.shape(est_nac))\n",
     "        nat_dic = {\n",
     "            'Id_Geo' : id,\n",
     "            'Pais' : pais,\n",
@@ -496,17 +416,20 @@
     "            'Alc_o_mun_ILE' : municipios\n",
     "        }\n",
     "        \n",
-    "        # try:\n",
-    "        ile_geo = pd.read_csv(path)\n",
-    "        unido = ile_geo.append(pd.DataFrame(nat_dic))\n",
-    "        unido.to_csv('./tablas/geo_unida.csv', index=False)\n",
-    "        # except:\n",
-    "            # print('No se pudo completar')"
+    "        # print(np.shape(pd.DataFrame(nat_dic)))\n",
+    "        # print(nat_dic)\n",
+    "        # print(np.shape(nat_dic))\n",
+    "        try:\n",
+    "            ile_geo = pd.read_csv(path)\n",
+    "            unido = ile_geo.append(pd.DataFrame(nat_dic))\n",
+    "            unido.to_csv('./tablas/geo_unida.csv', index=False)\n",
+    "        except:\n",
+    "            print('No se pudo completar')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +519,7 @@
        "1           15.0         Mujer               MÃ©xico  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,23 +549,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "All arrays must be of the same length",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32md:\\rod_e\\Documents\\VSCode\\Mineria-de-datos\\crear_tablas.ipynb Celda 12\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/rod_e/Documents/VSCode/Mineria-de-datos/crear_tablas.ipynb#X20sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m get_geo(nat, columna\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mfecha_nacimiento\u001b[39;49m\u001b[39m'\u001b[39;49m, ile\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m)\n",
-      "\u001b[1;32md:\\rod_e\\Documents\\VSCode\\Mineria-de-datos\\crear_tablas.ipynb Celda 12\u001b[0m in \u001b[0;36mget_geo\u001b[1;34m(x, path, columna, ile)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/rod_e/Documents/VSCode/Mineria-de-datos/crear_tablas.ipynb#X20sZmlsZQ%3D%3D?line=75'>76</a>\u001b[0m \u001b[39m# try:\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/rod_e/Documents/VSCode/Mineria-de-datos/crear_tablas.ipynb#X20sZmlsZQ%3D%3D?line=76'>77</a>\u001b[0m ile_geo \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mread_csv(path)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/d%3A/rod_e/Documents/VSCode/Mineria-de-datos/crear_tablas.ipynb#X20sZmlsZQ%3D%3D?line=77'>78</a>\u001b[0m unido \u001b[39m=\u001b[39m ile_geo\u001b[39m.\u001b[39mappend(pd\u001b[39m.\u001b[39;49mDataFrame(nat_dic))\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/rod_e/Documents/VSCode/Mineria-de-datos/crear_tablas.ipynb#X20sZmlsZQ%3D%3D?line=78'>79</a>\u001b[0m unido\u001b[39m.\u001b[39mto_csv(\u001b[39m'\u001b[39m\u001b[39m./tablas/geo_unida.csv\u001b[39m\u001b[39m'\u001b[39m, index\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m)\n",
-      "File \u001b[1;32md:\\Users\\rod_e\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\core\\frame.py:636\u001b[0m, in \u001b[0;36mDataFrame.__init__\u001b[1;34m(self, data, index, columns, dtype, copy)\u001b[0m\n\u001b[0;32m    630\u001b[0m     mgr \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_init_mgr(\n\u001b[0;32m    631\u001b[0m         data, axes\u001b[39m=\u001b[39m{\u001b[39m\"\u001b[39m\u001b[39mindex\u001b[39m\u001b[39m\"\u001b[39m: index, \u001b[39m\"\u001b[39m\u001b[39mcolumns\u001b[39m\u001b[39m\"\u001b[39m: columns}, dtype\u001b[39m=\u001b[39mdtype, copy\u001b[39m=\u001b[39mcopy\n\u001b[0;32m    632\u001b[0m     )\n\u001b[0;32m    634\u001b[0m \u001b[39melif\u001b[39;00m \u001b[39misinstance\u001b[39m(data, \u001b[39mdict\u001b[39m):\n\u001b[0;32m    635\u001b[0m     \u001b[39m# GH#38939 de facto copy defaults to False only in non-dict cases\u001b[39;00m\n\u001b[1;32m--> 636\u001b[0m     mgr \u001b[39m=\u001b[39m dict_to_mgr(data, index, columns, dtype\u001b[39m=\u001b[39;49mdtype, copy\u001b[39m=\u001b[39;49mcopy, typ\u001b[39m=\u001b[39;49mmanager)\n\u001b[0;32m    637\u001b[0m \u001b[39melif\u001b[39;00m \u001b[39misinstance\u001b[39m(data, ma\u001b[39m.\u001b[39mMaskedArray):\n\u001b[0;32m    638\u001b[0m     \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mma\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mmrecords\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mmrecords\u001b[39;00m\n",
-      "File \u001b[1;32md:\\Users\\rod_e\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\core\\internals\\construction.py:502\u001b[0m, in \u001b[0;36mdict_to_mgr\u001b[1;34m(data, index, columns, dtype, typ, copy)\u001b[0m\n\u001b[0;32m    494\u001b[0m     arrays \u001b[39m=\u001b[39m [\n\u001b[0;32m    495\u001b[0m         x\n\u001b[0;32m    496\u001b[0m         \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mhasattr\u001b[39m(x, \u001b[39m\"\u001b[39m\u001b[39mdtype\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mor\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39misinstance\u001b[39m(x\u001b[39m.\u001b[39mdtype, ExtensionDtype)\n\u001b[0;32m    497\u001b[0m         \u001b[39melse\u001b[39;00m x\u001b[39m.\u001b[39mcopy()\n\u001b[0;32m    498\u001b[0m         \u001b[39mfor\u001b[39;00m x \u001b[39min\u001b[39;00m arrays\n\u001b[0;32m    499\u001b[0m     ]\n\u001b[0;32m    500\u001b[0m     \u001b[39m# TODO: can we get rid of the dt64tz special case above?\u001b[39;00m\n\u001b[1;32m--> 502\u001b[0m \u001b[39mreturn\u001b[39;00m arrays_to_mgr(arrays, columns, index, dtype\u001b[39m=\u001b[39;49mdtype, typ\u001b[39m=\u001b[39;49mtyp, consolidate\u001b[39m=\u001b[39;49mcopy)\n",
-      "File \u001b[1;32md:\\Users\\rod_e\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\core\\internals\\construction.py:120\u001b[0m, in \u001b[0;36marrays_to_mgr\u001b[1;34m(arrays, columns, index, dtype, verify_integrity, typ, consolidate)\u001b[0m\n\u001b[0;32m    117\u001b[0m \u001b[39mif\u001b[39;00m verify_integrity:\n\u001b[0;32m    118\u001b[0m     \u001b[39m# figure out the index, if necessary\u001b[39;00m\n\u001b[0;32m    119\u001b[0m     \u001b[39mif\u001b[39;00m index \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m--> 120\u001b[0m         index \u001b[39m=\u001b[39m _extract_index(arrays)\n\u001b[0;32m    121\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[0;32m    122\u001b[0m         index \u001b[39m=\u001b[39m ensure_index(index)\n",
-      "File \u001b[1;32md:\\Users\\rod_e\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\core\\internals\\construction.py:674\u001b[0m, in \u001b[0;36m_extract_index\u001b[1;34m(data)\u001b[0m\n\u001b[0;32m    672\u001b[0m lengths \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(\u001b[39mset\u001b[39m(raw_lengths))\n\u001b[0;32m    673\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(lengths) \u001b[39m>\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[1;32m--> 674\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mAll arrays must be of the same length\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m    676\u001b[0m \u001b[39mif\u001b[39;00m have_dicts:\n\u001b[0;32m    677\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[0;32m    678\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mMixing dicts with non-Series may lead to ambiguous ordering.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    679\u001b[0m     )\n",
-      "\u001b[1;31mValueError\u001b[0m: All arrays must be of the same length"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\rod_e\\AppData\\Local\\Temp\\ipykernel_6516\\215030511.py:88: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  unido = ile_geo.append(pd.DataFrame(nat_dic))\n"
      ]
     }
    ],
