--- a/crear_tablas.ipynb
+++ b/crear_tablas.ipynb
@@ -19,7 +19,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\rod_e\\AppData\\Local\\Temp\\ipykernel_6516\\1256429594.py:1: DtypeWarning: Columns (13,28,29,38,39) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\rod_e\\AppData\\Local\\Temp\\ipykernel_8552\\1256429594.py:1: DtypeWarning: Columns (13,28,29,38,39) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  data = pd.read_csv('./datasets/Data_unido_2018_2021.csv')\n"
      ]
     },
@@ -157,7 +157,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def tabla_hechos():\n",
+    "    persona = pd.read_csv('./tablas/tabla_persona.csv')\n",
+    "    ile = pd.read_csv('./tablas/ILE.csv')\n",
+    "    tiempo = pd.read_csv('./tablas/tiempojunta.csv')\n",
+    "    geo = pd.read_csv('./tablas/Geografia.csv')\n",
+    "    ile = pd.read_csv('./tablas/ILE.csv')\n",
+    "    abor = pd.read_csv('./datasets/Data_unido_2018_2021.csv')\n",
+    "\n",
+    "    hecho = {\n",
+    "        'Id_aborto' : ['ile' + str(i) for i in range(np.shape(persona)[0])],\n",
+    "        'Id_tiempo' : [(i) for i in tiempo['Id_tiempo'] if i.startswith('ile')],\n",
+    "        'Id_persona' : persona['Id'],\n",
+    "        'Id_entidad' : geo['Id_Geo'],\n",
+    "        'Id_ILE' : ile['id_ile'],\n",
+    "        'Semanas_gestacion' : abor['semanas_gestacion_usg'],\n",
+    "        'Dias_gestacion' : abor['dias_gestacion_usg']    \n",
+    "    }\n",
+    "    \n",
+    "    pd.DataFrame(hecho).to_csv('./tablas/Tabla_Ile_hechos.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\rod_e\\AppData\\Local\\Temp\\ipykernel_8552\\1702054185.py:4: DtypeWarning: Columns (6) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  tiempo = pd.read_csv('./tablas/tiempojunta.csv')\n",
+      "C:\\Users\\rod_e\\AppData\\Local\\Temp\\ipykernel_8552\\1702054185.py:7: DtypeWarning: Columns (13,28,29,38,39) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  abor = pd.read_csv('./datasets/Data_unido_2018_2021.csv')\n"
+     ]
+    }
+   ],
+   "source": [
+    "tabla_hechos()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,24 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "get_table_medicina(data)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Dataset Natalidad\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +393,7 @@
     "            else:\n",
     "                estado.append('Edo. de México')\n",
     "        \n",
-    "        id = [i for i in range(le[0])]\n",
+    "        id = ['ile' + str(i) for i in range(le[0])]\n",
     "        est_nac = ['Null' for i in range(le[0])]\n",
     "        mun_nac = ['Null' for i in range(le[0])]\n",
     "\n",
@@ -381,24 +411,19 @@
     "        pd.DataFrame(dat).to_csv(path, index=False)\n",
     "    \n",
     "    else:    \n",
+    "        print('primer paso')\n",
     "        # Obtenemos la columan con la que vamos a trabajar\n",
-    "        nat_mun = x[columna]\n",
+    "        nat_mun = x['mun_alc_nacimiento']\n",
     "        inicio = 90042\n",
     "        final = inicio + np.shape(nat_mun)[0]\n",
     "        \n",
     "        \n",
-    "        id = [i for i in range(inicio, final)]\n",
+    "        id = ['Nat' + str(i) for i in range(inicio, final)]\n",
     "        pais = ['México' for i in nat_mun]\n",
     "        estado = [float('nan') for mun in nat_mun]\n",
     "        municipios = ['Null' for i in range(np.shape(nat_mun)[0])]\n",
     "        \n",
-    "        est_nac = list()\n",
-    "        \n",
-    "        for municipio in nat_mun:\n",
-    "            if municipio in alcaldias_min:\n",
-    "                est_nac.append('Ciudad de México')\n",
-    "            else:\n",
-    "                est_nac.append('Edo. de México')\n",
+    "        est_nac = x['estado_nacimiento']\n",
     "        \n",
     "        \n",
     "        # print('Natalidad',np.shape(nat_mun))\n",
@@ -429,7 +454,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['año', 'mes', 'fecha_ingreso', 'referida', 'estado_civil', 'edad',\n",
+       "       'institucion_derechohab', 'nivel_edu', 'ocupacion', 'religion',\n",
+       "       'parentesco', 'entidad', 'alc_o_municipio', 'edad_primera_menstruacion',\n",
+       "       'edad_inicio_vida_sexual', 'fecha_ultima_menstruacion',\n",
+       "       'semanas_embarazo', 'numero_hijos', 'numero_embarazos',\n",
+       "       'numero_abortos', 'numero_partos', 'numero_cesareas', 'numero_iles',\n",
+       "       'recibio_consejeria', 'uso_anticonceptivo', 'fecha_primera_valoracion',\n",
+       "       'numero_consultas', 'motivos_interrupcion', 'fecha_ingreso_hosp',\n",
+       "       'fecha_egreso_hosp', 'desc_servicio', 'semanas_gestacion_usg',\n",
+       "       'dias_gestacion_usg', 'firma_consentimiento', 'se_complica',\n",
+       "       'con_dolor', 'analgesico', 'anticonceptivo_post', 'fecha_cierre',\n",
+       "       'resultado_ile', 'procedimiento_ile'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_geo(data, ile=True)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dataset Natalidad\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +593,7 @@
        "1           15.0         Mujer               MÃ©xico  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -527,6 +601,38 @@
    "source": [
     "nat = pd.read_csv('./datasets/Natalidad_2016-2021.csv', encoding='utf-8')\n",
     "nat.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'alc_o_municipio'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "File \u001b[1;32md:\\Users\\rod_e\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\core\\indexes\\base.py:3621\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key, method, tolerance)\u001b[0m\n\u001b[0;32m   3620\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m-> 3621\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_engine\u001b[39m.\u001b[39;49mget_loc(casted_key)\n\u001b[0;32m   3622\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n",
+      "File \u001b[1;32md:\\Users\\rod_e\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\_libs\\index.pyx:136\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32md:\\Users\\rod_e\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\_libs\\index.pyx:163\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mpandas\\_libs\\hashtable_class_helper.pxi:5198\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mpandas\\_libs\\hashtable_class_helper.pxi:5206\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'alc_o_municipio'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32md:\\rod_e\\Documents\\VSCode\\Mineria-de-datos\\crear_tablas.ipynb Celda 14\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/rod_e/Documents/VSCode/Mineria-de-datos/crear_tablas.ipynb#X23sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m get_geo(nat, \u001b[39mFalse\u001b[39;49;00m)\n",
+      "\u001b[1;32md:\\rod_e\\Documents\\VSCode\\Mineria-de-datos\\crear_tablas.ipynb Celda 14\u001b[0m in \u001b[0;36mget_geo\u001b[1;34m(x, path, columna, ile)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/rod_e/Documents/VSCode/Mineria-de-datos/crear_tablas.ipynb#X23sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m alcaldias \u001b[39m=\u001b[39m [\u001b[39m'\u001b[39m\u001b[39mÁLVARO OBREGÓN\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mAZCAPOTZALCO\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mBENÍTO JUÁREZ\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mCOYOACÁN\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mCUAJIMALPA DE MORELOS\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mCUAUHTÉMOC\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mGUSTAVO A. MADERO\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mIZTACALCO\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m'\u001b[39m\u001b[39mIZTAPALAPA\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mMAGDALENA CONTRERAS\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mMIGUEL HIDALGO\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mMILPA ALTA\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mTLÁHUAC\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mTLALPAN\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mVENUSTIANO CARRANZA\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mXOCHIMILCO\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/rod_e/Documents/VSCode/Mineria-de-datos/crear_tablas.ipynb#X23sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m \u001b[39mif\u001b[39;00m ile:\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/rod_e/Documents/VSCode/Mineria-de-datos/crear_tablas.ipynb#X23sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m     \u001b[39m# municipios = x[columna]\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/rod_e/Documents/VSCode/Mineria-de-datos/crear_tablas.ipynb#X23sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m     \u001b[39m# lon = np.shape(municipios)\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/d%3A/rod_e/Documents/VSCode/Mineria-de-datos/crear_tablas.ipynb#X23sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m     municipios \u001b[39m=\u001b[39m x[columna]\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/rod_e/Documents/VSCode/Mineria-de-datos/crear_tablas.ipynb#X23sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m     le \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mshape(municipios)\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/rod_e/Documents/VSCode/Mineria-de-datos/crear_tablas.ipynb#X23sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m     estado \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m()\n",
+      "File \u001b[1;32md:\\Users\\rod_e\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\core\\frame.py:3505\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3503\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcolumns\u001b[39m.\u001b[39mnlevels \u001b[39m>\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[0;32m   3504\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_getitem_multilevel(key)\n\u001b[1;32m-> 3505\u001b[0m indexer \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcolumns\u001b[39m.\u001b[39;49mget_loc(key)\n\u001b[0;32m   3506\u001b[0m \u001b[39mif\u001b[39;00m is_integer(indexer):\n\u001b[0;32m   3507\u001b[0m     indexer \u001b[39m=\u001b[39m [indexer]\n",
+      "File \u001b[1;32md:\\Users\\rod_e\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\core\\indexes\\base.py:3623\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key, method, tolerance)\u001b[0m\n\u001b[0;32m   3621\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_engine\u001b[39m.\u001b[39mget_loc(casted_key)\n\u001b[0;32m   3622\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n\u001b[1;32m-> 3623\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(key) \u001b[39mfrom\u001b[39;00m \u001b[39merr\u001b[39;00m\n\u001b[0;32m   3624\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mTypeError\u001b[39;00m:\n\u001b[0;32m   3625\u001b[0m     \u001b[39m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[0;32m   3626\u001b[0m     \u001b[39m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[0;32m   3627\u001b[0m     \u001b[39m#  the TypeError.\u001b[39;00m\n\u001b[0;32m   3628\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_check_indexing_error(key)\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'alc_o_municipio'"
+     ]
+    }
+   ],
+   "source": [
+    "get_geo(nat, False)"
    ]
   },
   {
@@ -563,6 +669,24 @@
    ],
    "source": [
     "get_geo(nat, columna='fecha_nacimiento', ile=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\rod_e\\AppData\\Local\\Temp\\ipykernel_8552\\89286029.py:71: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  juntos = uni.append(pd.DataFrame(tabla_tiempo))\n"
+     ]
+    }
+   ],
+   "source": [
+    "generar_tabla_tiempo(nat, columna='fecha_nacimiento')"
    ]
   }
  ],
