--- a/crear_tablas.ipynb
+++ b/crear_tablas.ipynb
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,38 +454,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['año', 'mes', 'fecha_ingreso', 'referida', 'estado_civil', 'edad',\n",
-       "       'institucion_derechohab', 'nivel_edu', 'ocupacion', 'religion',\n",
-       "       'parentesco', 'entidad', 'alc_o_municipio', 'edad_primera_menstruacion',\n",
-       "       'edad_inicio_vida_sexual', 'fecha_ultima_menstruacion',\n",
-       "       'semanas_embarazo', 'numero_hijos', 'numero_embarazos',\n",
-       "       'numero_abortos', 'numero_partos', 'numero_cesareas', 'numero_iles',\n",
-       "       'recibio_consejeria', 'uso_anticonceptivo', 'fecha_primera_valoracion',\n",
-       "       'numero_consultas', 'motivos_interrupcion', 'fecha_ingreso_hosp',\n",
-       "       'fecha_egreso_hosp', 'desc_servicio', 'semanas_gestacion_usg',\n",
-       "       'dias_gestacion_usg', 'firma_consentimiento', 'se_complica',\n",
-       "       'con_dolor', 'analgesico', 'anticonceptivo_post', 'fecha_cierre',\n",
-       "       'resultado_ile', 'procedimiento_ile'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
    "outputs": [],
@@ -503,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +561,7 @@
        "1           15.0         Mujer               MÃ©xico  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,88 +573,159 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'alc_o_municipio'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "File \u001b[1;32md:\\Users\\rod_e\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\core\\indexes\\base.py:3621\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key, method, tolerance)\u001b[0m\n\u001b[0;32m   3620\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m-> 3621\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_engine\u001b[39m.\u001b[39;49mget_loc(casted_key)\n\u001b[0;32m   3622\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n",
-      "File \u001b[1;32md:\\Users\\rod_e\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\_libs\\index.pyx:136\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32md:\\Users\\rod_e\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\_libs\\index.pyx:163\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32mpandas\\_libs\\hashtable_class_helper.pxi:5198\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32mpandas\\_libs\\hashtable_class_helper.pxi:5206\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'alc_o_municipio'",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32md:\\rod_e\\Documents\\VSCode\\Mineria-de-datos\\crear_tablas.ipynb Celda 14\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/rod_e/Documents/VSCode/Mineria-de-datos/crear_tablas.ipynb#X23sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m get_geo(nat, \u001b[39mFalse\u001b[39;49;00m)\n",
-      "\u001b[1;32md:\\rod_e\\Documents\\VSCode\\Mineria-de-datos\\crear_tablas.ipynb Celda 14\u001b[0m in \u001b[0;36mget_geo\u001b[1;34m(x, path, columna, ile)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/rod_e/Documents/VSCode/Mineria-de-datos/crear_tablas.ipynb#X23sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m alcaldias \u001b[39m=\u001b[39m [\u001b[39m'\u001b[39m\u001b[39mÁLVARO OBREGÓN\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mAZCAPOTZALCO\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mBENÍTO JUÁREZ\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mCOYOACÁN\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mCUAJIMALPA DE MORELOS\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mCUAUHTÉMOC\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mGUSTAVO A. MADERO\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mIZTACALCO\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m'\u001b[39m\u001b[39mIZTAPALAPA\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mMAGDALENA CONTRERAS\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mMIGUEL HIDALGO\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mMILPA ALTA\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mTLÁHUAC\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mTLALPAN\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mVENUSTIANO CARRANZA\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mXOCHIMILCO\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/rod_e/Documents/VSCode/Mineria-de-datos/crear_tablas.ipynb#X23sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m \u001b[39mif\u001b[39;00m ile:\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/rod_e/Documents/VSCode/Mineria-de-datos/crear_tablas.ipynb#X23sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m     \u001b[39m# municipios = x[columna]\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/rod_e/Documents/VSCode/Mineria-de-datos/crear_tablas.ipynb#X23sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m     \u001b[39m# lon = np.shape(municipios)\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/d%3A/rod_e/Documents/VSCode/Mineria-de-datos/crear_tablas.ipynb#X23sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m     municipios \u001b[39m=\u001b[39m x[columna]\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/rod_e/Documents/VSCode/Mineria-de-datos/crear_tablas.ipynb#X23sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m     le \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mshape(municipios)\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/rod_e/Documents/VSCode/Mineria-de-datos/crear_tablas.ipynb#X23sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m     estado \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m()\n",
-      "File \u001b[1;32md:\\Users\\rod_e\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\core\\frame.py:3505\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3503\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcolumns\u001b[39m.\u001b[39mnlevels \u001b[39m>\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[0;32m   3504\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_getitem_multilevel(key)\n\u001b[1;32m-> 3505\u001b[0m indexer \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcolumns\u001b[39m.\u001b[39;49mget_loc(key)\n\u001b[0;32m   3506\u001b[0m \u001b[39mif\u001b[39;00m is_integer(indexer):\n\u001b[0;32m   3507\u001b[0m     indexer \u001b[39m=\u001b[39m [indexer]\n",
-      "File \u001b[1;32md:\\Users\\rod_e\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\core\\indexes\\base.py:3623\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key, method, tolerance)\u001b[0m\n\u001b[0;32m   3621\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_engine\u001b[39m.\u001b[39mget_loc(casted_key)\n\u001b[0;32m   3622\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n\u001b[1;32m-> 3623\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(key) \u001b[39mfrom\u001b[39;00m \u001b[39merr\u001b[39;00m\n\u001b[0;32m   3624\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mTypeError\u001b[39;00m:\n\u001b[0;32m   3625\u001b[0m     \u001b[39m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[0;32m   3626\u001b[0m     \u001b[39m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[0;32m   3627\u001b[0m     \u001b[39m#  the TypeError.\u001b[39;00m\n\u001b[0;32m   3628\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_check_indexing_error(key)\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'alc_o_municipio'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "primer paso\n"
      ]
-    }
-   ],
-   "source": [
-    "get_geo(nat, False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\rod_e\\AppData\\Local\\Temp\\ipykernel_16708\\2857782416.py:71: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  juntos = uni.append(pd.DataFrame(tabla_tiempo))\n"
-     ]
-    }
-   ],
-   "source": [
-    "generar_tabla_tiempo(nat, columna='fecha_nacimiento')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\rod_e\\AppData\\Local\\Temp\\ipykernel_6516\\215030511.py:88: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "C:\\Users\\rod_e\\AppData\\Local\\Temp\\ipykernel_8552\\3488467121.py:83: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  unido = ile_geo.append(pd.DataFrame(nat_dic))\n"
      ]
     }
    ],
    "source": [
-    "get_geo(nat, columna='fecha_nacimiento', ile=False)"
+    "get_geo(nat, ile = False)\n",
+    "\n",
+    "generar_tabla_tiempo(nat, columna='fecha_nacimiento')\n",
+    "\n",
+    "get_geo(nat, columna='fecha_nacimiento', ile=False)\n",
+    "\n",
+    "generar_tabla_tiempo(nat, columna='fecha_nacimiento')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Preparacion para svm\n",
+    "\n",
+    "Dataset ILE"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\rod_e\\AppData\\Local\\Temp\\ipykernel_8552\\89286029.py:71: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  juntos = uni.append(pd.DataFrame(tabla_tiempo))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "generar_tabla_tiempo(nat, columna='fecha_nacimiento')"
+    "fechas = list(set(data['fecha_ingreso']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "abortos = data['fecha_ingreso'].value_counts()\n",
+    "abortos = dict(abortos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "index_fecha = []\n",
+    "\n",
+    "for i, value in enumerate(data['fecha_ingreso']):\n",
+    "    if value in fechas:\n",
+    "        index_fecha.append(i)\n",
+    "        \n",
+    "dat = data.iloc[index_fecha]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = dat[['año', 'edad', 'edad_inicio_vida_sexual', 'semanas_embarazo', 'numero_hijos', 'numero_embarazos', 'numero_abortos', 'numero_partos', 'numero_cesareas', 'numero_iles', 'numero_consultas', 'semanas_gestacion_usg', 'dias_gestacion_usg']]\n",
+    "pd.DataFrame(x).to_csv('./Modelo svm/ile_x.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = data['fecha_ingreso'].map(abortos)\n",
+    "pd.DataFrame(y).to_csv('./Modelo svm/ile_y.csv', index=False)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Dataset natalidad"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "natalidad = nat['fecha_nacimiento'].value_counts()\n",
+    "natalidad = dict(natalidad)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fecha = list(set(nat['fecha_nacimiento']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "index_fecha = list()\n",
+    "\n",
+    "for i, value in enumerate(nat['fecha_nacimiento']):\n",
+    "    if value in fecha:\n",
+    "        index_fecha.append(i)\n",
+    "        \n",
+    "natal = nat.iloc[index_fecha]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = natal[['anio', 'tutora_1_edad', 'tutora_2_edad']]\n",
+    "pd.DataFrame(X).to_csv('./Modelo svm/nat_valorX.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = nat['fecha_nacimiento'].map(natalidad)\n",
+    "pd.DataFrame(y).to_csv('./Modelo svm/nat_valorY.csv', index = False)"
    ]
   }
  ],
